--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.11.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "socket.io-client": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
