--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.11.0",
     "react-app-rewired": "^2.1.4",
     "react-dom": "^16.11.0",
+    "react-draggable": "^4.1.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
